--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,25 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+  font-family: Inter-var;
+  src: url(assets/Inter.var.woff2);
+  font-weight: 500;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: Inter-bold;
+  src: url(assets/Inter-Bold.woff);
+  font-weight: 800;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Inter-var;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: Inter-bold;
 }
